# debsutil

./: pyproject.toml
debsutil/: util.py
debsutil.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_debsutil.py  test_errors.py
